--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
   "license": "MIT",
   "dependencies": {
     "babelify": "^6.0.1",
-    "famous": "^0.6.1"
+    "famous": "git@github.com:Famous/engine.git#f2e731891601e689726d8492e713b5b55051b835"
   }
 }
